Fixing tap highlight on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-html {
-  @apply scroll-smooth bg-base font-inter text-neutral-10;
-  scroll-padding-top: 10px;
+@layer base {
+  html {
+    @apply scroll-smooth bg-base font-inter text-neutral-10;
+    scroll-padding-top: 10px;
+    -webkit-tap-highlight-color: transparent;
+  }
 }
